Issue 105 : Dark Mode + Theming #118  (#119)
* Dark Mode + Theming

* Themes scss file created with default color scheme and dark color scheme.

* Logic for managing dark mode toggle added.

* Modified existing scss/html to work with theme toggling.

* Fixed hover issues

* Added enable_darkmode to configs.

* Added the requested option of disabling/enabling dark mode via config files.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -300,6 +300,9 @@ blockquote {
   }
 }
 
+.news table th {
+  color: var(--global-text-color);
+}
 
 // Social (bottom)
 
